[project]
name = "qtop"
version = "0.1.0"
description = "Terminal TUI for monitoring SGE (Sun Grid Engine) cluster jobs"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jon Gauthier", email = "jon@gauthiers.net" }]
dependencies = [
    "textual>=0.60",
]

[project.scripts]
qtop = "qtop.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-textual-snapshot>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qtop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
